--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,16 +5,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=DynaPuff&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Oswald:wght@200..700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Posadas|design|interiorismo</title>
 </head>
 
 <body>
 
-    <header class="header-up">
+    <header>
         <h2 class="logo">P<span class="highlight-logo">D</span>I</h2>
-        <nav class="items">
-            <div class="lista">
+        <nav>
+            <div>
                 <ul>
                     <li><a class="item-box" href="../index.html">Inicio</a></li>
                     <li><a class="item-box" href="./nosotros.html">Nosotros</a></li>
@@ -23,23 +30,84 @@
                     <li><a class="item-box" href="./contacto.html">Contacto</a></li>
                 </ul>
             </div>
+        </nav>
     </header>
 
-    <main class="contenido-paginas">
-        <section>
-            <p class="lorem-paginas">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti nam amet, earum,
-                consequuntur ipsa enim est ratione consequatur tempora eius sunt hic adipisci. Nobis sed deserunt neque
-                qui.
-                Ex, mollitia.
-            </p>
-        </section>
+    <main>
+        <div class="container py-5">
+            <div class="text-center mb-5">
+                <h1 class="display-4 fw-bold">Contacto</h1>
+                <p class="lead">Estamos aquí para responder tus consultas</p>
+            </div>
     </main>
+    <section>
 
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                <div class="card shadow-sm">
+                    <div class="card-body">
+                        <form id="contactForm">
+                            <div class="mb-3">
+                                <label for="nombre" class="form-label">Nombre completo</label>
+                                <input type="text" class="form-control" id="nombre" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="email" class="form-label">Correo electrónico</label>
+                                <input type="email" class="form-control" id="email" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="telefono" class="form-label">Teléfono</label>
+                                <input type="tel" class="form-control" id="telefono" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="servicio" class="form-label">Servicio de interés</label>
+                                <select class="form-select" id="servicio" required>
+                                    <option value="">Corte de Tableros</option>
+                                    <option value="">Pegado de cantos</option>
+                                    <option value="">Maquinado de piezas</option>
+                                    <option value="">Muebles a medida</option>
+                                </select>
+                            </div>
+                            <div class="mb-3">
+                                <label for="mensaje" class="form-label">Mensaje</label>
+                                <textarea class="form-control" id="mensaje" rows="4" required></textarea>
+                            </div>
+                            <div class="d-grid gap-2">
+                                <button type="submit" class="btn btn-primary">Enviar mensaje</button>
+                                <a href="https://wa.me/5493764390808" class="btn btn-success">
+                                    <i class="fab fa-whatsapp me-2"></i>Contactar por WhatsApp
+                                </a>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row mt-5">
+            <div class="col-md-4 text-center">
+                <i class="fas fa-map-marker-alt fa-3x mb-3 text-primary"></i>
+                <h4>Ubicación</h4>
+                <p>Av. Corrientes 1445<br>Posadas, Misiones</p>
+            </div>
+            <div class="col-md-4 text-center">
+                <i class="fas fa-phone fa-3x mb-3 text-primary"></i>
+                <h4>Teléfono</h4>
+                <p>+549 (376) 4390808</p>
+            </div>
+            <div class="col-md-4 text-center">
+                <i class="fas fa-envelope fa-3x mb-3 text-primary"></i>
+                <h4>Email</h4>
+                <p>pablobaslini@gmail.com</p>
+            </div>
+        </div>
+        </div>
+    </section>
     <footer class="footer-down">
-        <div class="social-icons"> 
-            <img src="../Entrega_1_coder/img/facebook (2).png" width="45px" height="45px">
-            <img src="../Entrega_1_coder/img/instagram (2).png" width="45px" height="45px">
-            <img src="../Entrega_1_coder/img/whatsapp (2).png" width="45px" height="45px" >
+        <div class="social-icons">
+            <img src="../img/facebook (2).png" width="45px" height="45px">
+            <img src="../img/instagram (2).png" width="45px" height="45px">
+            <img src="../img/whatsapp (2).png" width="45px" height="45px">
         </div>
         <a class='button-footer' href="../index.html">
             Volver al incio
@@ -49,5 +117,8 @@
             loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </footer>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 
 </html>
