--- a/pages/productos.html
+++ b/pages/productos.html
@@ -5,12 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=DynaPuff&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Oswald:wght@200..700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Posadas|design|interiorismo</title>
 </head>
 
 <body>
-    <header class="header-up">
+    <header>
         <h2 class="logo">P<span class="highlight-logo">D</span>I</h2>
         <nav class="items">
             <div class="lista">
@@ -26,19 +33,48 @@
 
     <main class="contenido-paginas">
         <section>
-            <h5 class="lorem-paginas">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti nam amet, earum,
-                consequuntur ipsa enim est ratione consequatur tempora eius sunt hic adipisci. Nobis sed deserunt neque
-                qui.
-                Ex, mollitia.
+            <h5 class="lorem-paginas">Navegue en el carrousel de abajo para ver los productos ya terminados de clientes
+                y empresas que confiaron en nuerstros diseños.
             </h5>
         </section>
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" style="margin-left: 10%; margin-right: 10%;">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="../img/Carousel (1).jpg" alt="Imagen 1">
+                </div>
+                <div class="carousel-item">
+                    <img src="../img/Carousel (2).jpg" alt="Imagen 2">
+                </div>
+                <div class="carousel-item">
+                    <img src="../img/Carousel (3).jpg" alt="Imagen 3">
+                </div>
+                <div class="carousel-item">
+                    <img src="../img/Carousel (4).jpg" alt="Imagen 4">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+        
     </main>
 
     <footer class="footer-down">
-        <div class="social-icons"> 
-            <img src="../Entrega_1_coder/img/facebook (2).png" width="45px" height="45px">
-            <img src="../Entrega_1_coder/img/instagram (2).png" width="45px" height="45px">
-            <img src="../Entrega_1_coder/img/whatsapp (2).png" width="45px" height="45px" >
+        <div class="social-icons">
+            <img src="../img/facebook (2).png" width="45px" height="45px">
+            <img src="../img/instagram (2).png" width="45px" height="45px">
+            <img src="../img/whatsapp (2).png" width="45px" height="45px">
         </div>
         <a class='button-footer' href="../index.html">
             Volver al incio
@@ -48,5 +84,7 @@
             loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </footer>
 </body>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 </html>
