--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -5,18 +5,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=DynaPuff&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Oswald:wght@200..700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Posadas|design|interiorismo</title>
 </head>
 
 <body>
-    <header class="header-up">
+    <header>
         <h2 class="logo">P<span class="highlight-logo">D</span>I</h2>
         <nav class="items">
             <div class="lista">
                 <ul>
                     <li><a class="item-box" href="../index.html">Inicio</a></li>
-                    <li><a class="item-box" href=".nosotros.html">Nosotros</a></li>
+                    <li><a class="item-box" href="./nosotros.html">Nosotros</a></li>
                     <li><a class="item-box" href="./productos.html">Productos</a></li>
                     <li><a class="item-box" href="./servicios.html">Servicios</a></li>
                     <li><a class="item-box" href="./contacto.html">Contacto</a></li>
@@ -26,20 +33,46 @@
 
     <main class="contenido-paginas">
         <section>
-            <h5 class="lorem-paginas">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti nam amet, earum,
-                consequuntur ipsa enim est ratione consequatur tempora eius sunt hic adipisci. Nobis sed deserunt neque
-                qui.
-                Ex, mollitia.
+            <h5 class="lorem-paginas">En nuestros talleres ofrecemos una diversa cantidad de servicios para terceros,
+                con la mayor agilidad, lo que optimiza sus proyecyos!
             </h5>
         </section>
+        <section>
+            <div>
+                <div class="grid-servicios">
+                    <div class="titulo-tarjetas">
+                        <h2>Corte de Tableros a medida</h2>
+                        <img src="../img/corte servicios.jpg" width=300px alt="corte">
+                        <div class="pie">
+                            <a href="../pages/contacto.html">contactenos</a>
+                        </div>
+                    </div>
+                    <div class="titulo-tarjetas">
+                        <h2>Canteado ABS de piezas</h2>
+                        <img src="../img/pegado servicios.jpg" width=300px alt="pegado">
+                        <div class="pie">
+                            <a href="../pages/contacto.html">contactenos</a>
+                        </div>
+                    </div>
+                    <div class="titulo-tarjetas">
+                        <h2>Maquinado de partes de muebles</h2>
+                        <img src="../img/maquinado sericios.jpg" width=300px alt="maquinado">
+                        <div class="pie">
+                            <a href="../pages/contacto.html">contactenos</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
 
 
     <footer class="footer-down">
-        <div class="social-icons"> 
-            <img src="../Entrega_1_coder/img/facebook (2).png" width="45px" height="45px">
-            <img src="../Entrega_1_coder/img/instagram (2).png" width="45px" height="45px">
-            <img src="../Entrega_1_coder/img/whatsapp (2).png" width="45px" height="45px" >
+        <div class="social-icons">
+            <img src="../img/facebook (2).png" width="45px" height="45px">
+            <img src="../img/instagram (2).png" width="45px" height="45px">
+            <img src="../img/whatsapp (2).png" width="45px" height="45px">
         </div>
         <a class='button-footer' href="../index.html">
             Volver al incio
@@ -49,5 +82,8 @@
             loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </footer>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 
 </html>
