--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -21,7 +21,8 @@
     <header>
         <nav class="navbar navbar-dark bg-dark fixed-top">
             <div class="container-fluid">
-                <a class="navbar-brand">P<span class="highlight-logo">D</span>I</a>
+                <!-- <a class="navbar-brand">P<span class="highlight-logo">D</span>I</a> -->
+                <img src="../img/logo.png" alt="logo">
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
                     aria-label="Toggle navigation">
@@ -44,18 +45,6 @@
                 </div>
             </div>
         </nav>
-        <!--<h2 class="logo">P<span class="highlight-logo">D</span>I</h2>
-        <nav>
-            <div>
-                <ul>
-                    <li><a class="item-box" href="../index.html">Inicio</a></li>
-                    <li><a class="item-box" href="./nosotros.html">Nosotros</a></li>
-                    <li><a class="item-box" href="./productos.html">Productos</a></li>
-                    <li><a class="item-box" href="./servicios.html">Servicios</a></li>
-                    <li><a class="item-box" href="./contacto.html">Contacto</a></li>
-                </ul>
-            </div>
-        </nav>-->
     </header>
 
     <main>
@@ -109,18 +98,18 @@
             </div>
         </div>
 
-        <div class="row mt-5">
-            <div class="col-md-4 text-center">
+        <div class="contact-items">
+            <div class="text-center">
                 <i class="fas fa-map-marker-alt fa-3x mb-3 text-primary"></i>
                 <h4>Ubicación</h4>
                 <p>Av. Corrientes 1445<br>Posadas, Misiones</p>
             </div>
-            <div class="col-md-4 text-center">
+            <div class="text-center">
                 <i class="fas fa-phone fa-3x mb-3 text-primary"></i>
                 <h4>Teléfono</h4>
                 <p>+549 (376) 4390808</p>
             </div>
-            <div class="col-md-4 text-center">
+            <div class="text-center">
                 <i class="fas fa-envelope fa-3x mb-3 text-primary"></i>
                 <h4>Email</h4>
                 <p>pablobaslini@gmail.com</p>
