--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -20,7 +20,8 @@
     <header>
         <nav class="navbar navbar-dark bg-dark fixed-top">
             <div class="container-fluid">
-                <a class="navbar-brand">P<span class="highlight-logo">D</span>I</a>
+                <!-- <a class="navbar-brand">P<span class="highlight-logo">D</span>I</a> -->
+                <img src="../img/logo.png" alt="logo">
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
                     aria-label="Toggle navigation">
@@ -46,18 +47,6 @@
                 </div>
             </div>
         </nav>
-        <!--<h2 class="logo">P<span class="highlight-logo">D</span>I</h2>
-        <nav class="items">
-            <div class="lista">
-                <ul>
-                    <li><a class="item-box" href="../index.html">Inicio</a></li>
-                    <li><a class="item-box" href="./nosotros.html">Nosotros</a></li>
-                    <li><a class="item-box" href="./productos.html">Productos</a></li>
-                    <li><a class="item-box" href="./servicios.html">Servicios</a></li>
-                    <li><a class="item-box" href="./contacto.html">Contacto</a></li>
-                </ul>
-            </div>
-        </nav>-->
     </header>
 
     <main>
