--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -10,10 +10,17 @@
     <link
         href="https://fonts.googleapis.com/css2?family=DynaPuff&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Oswald:wght@200..700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="./scss/estilos.scss">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <title>Posadas|design|interiorismo</title>
+       <meta name="keywords" content="muebles, amoblamientos, servicios, muebles de melamina, muebles de madera, canteado piezas, corte placas, carpinteria ">
+       <meta name="description" content="Conozcanos y vea nuestra trayectoria en el rubro">
+       <meta ptoperty="og:type" content="E-commerce">
+       <meta ptoperty="og:title" content="Amoblamientos a medida, muebles de melamina y madera">
+       <meta ptoperty="og:url" content="https://posadasdesign.netlify.app/">
+       <meta ptoperty="og:imagen" content="https://posadasdesign.netlify.app/img/logo.png">
+       <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+       <title>Posadas | Design | Interiorismo Fabricacion de Amoblamientos</title>
 </head>
 
 <body>
@@ -50,9 +57,9 @@
 
     <main>
         <section class="hero">
-            <p>Somos una empresa familiar con 20 años de experiencia en el rubro de amoblamientos a
+            <h1>Somos una empresa familiar con 20 años de experiencia en el rubro de amoblamientos a
                 medida y remodelación de viviendas, con un alto sentido estético y atención a los requerimientos de
-                cada cliente en particular.</p>
+                cada cliente en particular.</h1>
 
             <section class="card-nosotros">
                 <div class="row justify-content-center">
