--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -10,10 +10,17 @@
     <link
         href="https://fonts.googleapis.com/css2?family=DynaPuff&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Oswald:wght@200..700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="./scss/estilos.scss">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <title>Posadas|design|interiorismo</title>
+       <meta name="keywords" content="muebles, amoblamientos, servicios, muebles de melamina, muebles de madera, canteado piezas, corte placas, carpinteria ">
+       <meta name="description" content="Servicios adicionales que ofrece la carpinteria para profesionales del rubro.">
+       <meta ptoperty="og:type" content="E-commerce">
+       <meta ptoperty="og:title" content="Amoblamientos a medida, muebles de melamina y madera">
+       <meta ptoperty="og:url" content="https://posadasdesign.netlify.app/">
+       <meta ptoperty="og:imagen" content="https://posadasdesign.netlify.app/img/logo.png">
+       <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+       <title>Posadas | Design | Interiorismo Fabricacion de Amoblamientos</title>
 </head>
 
 <body>
@@ -51,9 +58,7 @@
 
     <main class="contenido-paginas">
         <section>
-            <p>En nuestros talleres ofrecemos una diversa cantidad de servicios para terceros,
-                con la mayor agilidad, lo que optimiza sus proyectos!
-            </p>
+            <h1>En nuestros talleres ofrecemos una diversa cantidad de servicios para terceros</h1>
         </section>
         <section>
             <div class="grid-servicios">
