--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -10,18 +10,19 @@
     <link
         href="https://fonts.googleapis.com/css2?family=DynaPuff&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Oswald:wght@200..700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./scss/estilos.scss">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-       <meta name="keywords" content="muebles, amoblamientos, servicios, muebles de melamina, muebles de madera, canteado piezas, corte placas, carpinteria ">
-       <meta name="description" content="Contactese con nosotros para concretar una visita y 
+    <link rel="stylesheet" href="../css/estilos.css">
+    <meta name="keywords"
+        content="muebles, amoblamientos, servicios, muebles de melamina, muebles de madera, canteado piezas, corte placas, carpinteria ">
+    <meta name="description" content="Contactese con nosotros para concretar una visita y 
        obtener un presupuesto personalizado para sus necesidades.">
-       <meta ptoperty="og:type" content="E-commerce">
-       <meta ptoperty="og:title" content="Amoblamientos a medida, muebles de melamina y madera">
-       <meta ptoperty="og:url" content="https://posadasdesign.netlify.app/">
-       <meta ptoperty="og:imagen" content="https://posadasdesign.netlify.app/img/logo.png">
-       <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
-       <title>Posadas | Design | Interiorismo Fabricacion de Amoblamientos</title>
+    <meta ptoperty="og:type" content="E-commerce">
+    <meta ptoperty="og:title" content="Amoblamientos a medida, muebles de melamina y madera">
+    <meta ptoperty="og:url" content="https://posadasdesign.netlify.app/">
+    <meta ptoperty="og:imagen" content="https://posadasdesign.netlify.app/img/logo.png">
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+    <title>Posadas | Design | Interiorismo Fabricacion de Amoblamientos</title>
 </head>
 
 <body>
@@ -29,7 +30,7 @@
     <header>
         <nav class="navbar navbar-dark bg-dark fixed-top">
             <div class="container-fluid">
-                <img src="../img/logo.png" alt="logo">
+                <img src="../img/logo1.png" alt="logo">
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
                     aria-label="Toggle navigation">
