carpetas sass e imports

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta ptoperty="og:title" content="Amoblamientos a medida, muebles de melamina y madera">
     <meta ptoperty="og:url" content="https://posadasdesign.netlify.app/">
     <meta ptoperty="og:imagen" content="https://posadasdesign.netlify.app/img/logo.png">
-    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/logo1.png" type="image/x-icon">
     <title>Posadas | Design | Interiorismo Fabricacion de Amoblamientos</title>
 </head>
 
