Agregar animacion y transicion

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -58,9 +58,10 @@
     <main>
         <div class="container py-5">
             <div class="text-center mb-5">
-                <h1 class="display-4 fw-bold">Contacto</h1>
+                <h1 class="titulo-paginas">Contacto</h1>
                 <p class="lead">Estamos aquí para responder tus consultas</p>
             </div>
+        </div>
     </main>
     <section>
 
