--- a/pages/productos.html
+++ b/pages/productos.html
@@ -58,9 +58,10 @@
 
     <main class="contenido-paginas">
         <section>
-            <h1>Navegue en el carrousel de abajo para ver los productos ya terminados de clientes
+            <h1 class="titulo-paginas" id="alineacion">Navegue en el carrousel de abajo para ver los productos ya terminados de clientes
                 y empresas que confiaron en nuerstros diseños.
             </h1>
+            <div class="promociones">consulte por nuestras promociones</div>
         </section>
         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel"
             style="margin-left: 10%; margin-right: 10%;">
