--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -13,7 +13,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="../css/estilos.css">
     <meta name="keywords"
         content="muebles, amoblamientos, servicios, muebles de melamina, muebles de madera, canteado piezas, corte placas, carpinteria ">
     <meta name="description"
@@ -60,10 +60,9 @@
 
     <main>
         <section class="hero">
-            <h1>Somos una empresa familiar con 20 años de experiencia en el rubro de amoblamientos a
-                medida y remodelación de viviendas, con un alto sentido estético y atención a los requerimientos de
-                cada cliente en particular.</h1>
-
+            <div>
+                <h1 class="titulo-paginas">En esta seccion pueden conocer algo mas sobre nosotros, los que formamos este emprendimiento.</h1>
+            </div>
             <section class="card-nosotros">
                 <div class="row justify-content-center">
                     <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
