--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -58,7 +58,7 @@
 
     <main class="contenido-paginas">
         <section>
-            <h1>En nuestros talleres ofrecemos una diversa cantidad de servicios para terceros</h1>
+            <h1 class="titulo-paginas">En nuestros talleres ofrecemos una diversa cantidad de servicios para terceros</h1>
         </section>
         <section>
             <div class="grid-servicios">
