--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -69,11 +69,11 @@
                         <div class="card">
                             <img src="../img/lu.jpg" class="img-thumbnail" alt="imagen Nahuel">
                             <div class="card-body">
-                                <p class="card-text">Soy carpintero, de tercera generación. Trabajo en el taller con mi
+                                <arcticle class="card-text">Soy carpintero, de tercera generación. Trabajo en el taller con mi
                                     padre, y juntos llevamos a cabo los trabajos que nos encargan los clientes en un
                                     ambiente de
                                     armonía y eficiencia. Soy estudiante de Análisis de sistemas y fotógrafo
-                                    Profesional.</p>
+                                    Profesional.</arcticle>
                             </div>
                         </div>
                     </div>
@@ -82,11 +82,11 @@
                         <div class="card">
                             <img src="../img/yo.jpg" class="img-thumbnail" alt="imagen Pablo">
                             <div class="card-body">
-                                <p class="card-text">Soy carpintero de segunda generación, amo la carpintería como el
+                                <article class="card-text">Soy carpintero de segunda generación, amo la carpintería como el
                                     noble oficio que es y trato de transmitirlo a las generaciones venideras para que no
                                     se
                                     pierda el saber. También soy aficionado a la fotografía y estudiante de Desarrollo
-                                    web.</p>
+                                    web.</article>
                             </div>
                         </div>
                     </div>
