--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="./css/estilos.css">
     <meta name="keywords"
-        content="muebles, amoblamientos, servicios, muebles de melamina, muebles de madera, canteado piezas, corte placas, carpinteria ">
+        content="muebles de melamina, muebles de madera, carpintería a medida, corte de placas, canteado, diseño de muebles, amoblamientos, muebles personalizados, muebles modernos, muebles rústicos, servicios de carpintería, fabricación de muebles, muebles para cocina, alacenas a medida, muebles de oficina, decoración, diseño de interiores, muebles funcionales.">
     <meta name="description"
-        content="Somos una empresa dedicada a realizar amoblamiento a medida y a pedido del cliente, incorporando nuevas tendencias en diseño interior y en permanente actualizacion.">
+        content="Amoblamientos a medida, diseño personalizado, muebles modernos, tendencias en diseño interior, carpintería profesional, calidad, innovación, actualización constante.">
     <meta ptoperty="og:type" content="E-commerce">
     <meta ptoperty="og:title" content="Amoblamientos a medida, muebles de melamina y madera">
     <meta ptoperty="og:url" content="https://posadasdesign.netlify.app/">
