Entrega Final revisado

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -21,7 +21,7 @@
     <meta ptoperty="og:type" content="E-commerce">
     <meta ptoperty="og:title" content="Amoblamientos a medida, muebles de melamina y madera">
     <meta ptoperty="og:url" content="https://posadasdesign.netlify.app/">
-    <meta ptoperty="og:imagen" content="https://posadasdesign.netlify.app/img/logo.png">
+    <meta ptoperty="og:imagen" content="https://posadasdesign.netlify.app/img/logo.png" alt="logo">
     <link rel="shortcut icon" href="../img/logo1.png" type="image/x-icon">
     <title>Posadas | Design | Interiorismo Fabricacion de Amoblamientos</title>
 </head>
@@ -30,7 +30,7 @@
     <header>
         <nav class="navbar navbar-dark bg-dark fixed-top">
             <div class="container-fluid">
-                <img src="../img/logo1.png" alt="logo">
+                <img src="../img/logo1.png" alt="logo animado">
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
                     aria-label="Toggle navigation">
@@ -61,7 +61,8 @@
     <main>
         <section class="hero">
             <div>
-                <h1 class="titulo-paginas">En esta seccion pueden conocer algo mas sobre nosotros, los que formamos este emprendimiento.</h1>
+                <h1 class="titulo-paginas">En esta seccion pueden conocer algo mas sobre nosotros, los que formamos este
+                    emprendimiento.</h1>
             </div>
             <section class="card-nosotros">
                 <div class="row justify-content-center">
@@ -69,7 +70,8 @@
                         <div class="card">
                             <img src="../img/lu.jpg" class="img-thumbnail" alt="imagen Nahuel">
                             <div class="card-body">
-                                <arcticle class="card-text">Soy carpintero, de tercera generación. Trabajo en el taller con mi
+                                <arcticle class="card-text">Soy carpintero, de tercera generación. Trabajo en el taller
+                                    con mi
                                     padre, y juntos llevamos a cabo los trabajos que nos encargan los clientes en un
                                     ambiente de
                                     armonía y eficiencia. Soy estudiante de Análisis de sistemas y fotógrafo
@@ -82,7 +84,8 @@
                         <div class="card">
                             <img src="../img/yo.jpg" class="img-thumbnail" alt="imagen Pablo">
                             <div class="card-body">
-                                <article class="card-text">Soy carpintero de segunda generación, amo la carpintería como el
+                                <article class="card-text">Soy carpintero de segunda generación, amo la carpintería como
+                                    el
                                     noble oficio que es y trato de transmitirlo a las generaciones venideras para que no
                                     se
                                     pierda el saber. También soy aficionado a la fotografía y estudiante de Desarrollo
@@ -96,9 +99,9 @@
     </main>
     <footer class="footer-down">
         <div class="social-icons">
-            <img src="../img/facebook (2).png" width="45px" height="45px">
-            <img src="../img/instagram (2).png" width="45px" height="45px">
-            <img src="../img/whatsapp (2).png" width="45px" height="45px">
+            <img src="../img/facebook (2).png" width="45px" height="45px" alt="logo redes sociales">
+            <img src="../img/instagram (2).png" width="45px" height="45px" alt="logo redes sociales">
+            <img src="../img/whatsapp (2).png" width="45px" height="45px" alt="logo redes sociales">
         </div>
         <a class='button-footer' href="../index.html">
             Volver al incio
@@ -107,9 +110,10 @@
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1771.7047480429308!2d-55.90158786032711!3d-27.362923900000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9457be30301cea99%3A0xcffa04db9556754b!2sAv.%20Corrientes%201449%2C%20N3300MZI%20Posadas%2C%20Misiones!5e0!3m2!1ses-419!2sar!4v1730075220241!5m2!1ses-419!2sar"
             loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
 
 </html>
