--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <link rel="stylesheet" href="./css/estilos.css">
+    <link rel="stylesheet" href="./css/estilos.css">
     <meta name="keywords"
         content="muebles de melamina, muebles de madera, carpintería a medida, corte de placas, canteado, diseño de muebles, amoblamientos, muebles personalizados, muebles modernos, muebles rústicos, servicios de carpintería, fabricación de muebles, muebles para cocina, alacenas a medida, muebles de oficina, decoración, diseño de interiores, muebles funcionales.">
     <meta name="description"
@@ -22,7 +22,7 @@
     <meta ptoperty="og:title" content="Amoblamientos a medida, muebles de melamina y madera">
     <meta ptoperty="og:url" content="https://posadasdesign.netlify.app/">
     <meta ptoperty="og:imagen" content="https://posadasdesign.netlify.app/img/logo.png">
-    <link rel="shortcut icon" href="./img/logo1.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/logo1.png" type="image/x-icon" alt="Logo animado">
     <title>Posadas | Design | Interiorismo Fabricacion de Amoblamientos</title>
 </head>
 
@@ -142,9 +142,9 @@
     </main>
     <footer class="footer-down">
         <div class="social-icons">
-            <img src="./img/facebook (2).png" width="45px" height="45px">
-            <img src="./img/instagram (2).png" width="45px" height="45px">
-            <img src="./img/whatsapp (2).png" width="45px" height="45px">
+            <img src="./img/facebook (2).png" width="45px" height="45px" alt="logo redes sociales">
+            <img src="./img/instagram (2).png" width="45px" height="45px" alt="logo redes sociales">
+            <img src="./img/whatsapp (2).png" width="45px" height="45px" alt="logo redes sociales">
         </div>
         <a class='button-footer' href="./index.html">
             Volver al incio
@@ -153,9 +153,10 @@
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1771.7047480429308!2d-55.90158786032711!3d-27.362923900000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9457be30301cea99%3A0xcffa04db9556754b!2sAv.%20Corrientes%201449%2C%20N3300MZI%20Posadas%2C%20Misiones!5e0!3m2!1ses-419!2sar!4v1730075220241!5m2!1ses-419!2sar"
             loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
 
 </html>
