--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -21,7 +21,7 @@
     <meta ptoperty="og:title" content="Amoblamientos a medida, muebles de melamina y madera">
     <meta ptoperty="og:url" content="https://posadasdesign.netlify.app/">
     <meta ptoperty="og:imagen" content="https://posadasdesign.netlify.app/img/logo.png">
-    <link rel="shortcut icon" href="../img/logo1.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../img/logo1.png" type="image/x-icon" alt="logo animado">
     <title>Posadas | Design | Interiorismo Fabricacion de Amoblamientos</title>
 </head>
 
@@ -129,9 +129,9 @@
     </section>
     <footer class="footer-down">
         <div class="social-icons">
-            <img src="../img/facebook (2).png" width="45px" height="45px">
-            <img src="../img/instagram (2).png" width="45px" height="45px">
-            <img src="../img/whatsapp (2).png" width="45px" height="45px">
+            <img src="../img/facebook (2).png" width="45px" height="45px" alt="logo redes sociales">
+            <img src="../img/instagram (2).png" width="45px" height="45px" alt="logo redes sociales">
+            <img src="../img/whatsapp (2).png" width="45px" height="45px" alt="logo redes sociales">
         </div>
         <a class='button-footer' href="../index.html">
             Volver al incio
@@ -140,9 +140,9 @@
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1771.7047480429308!2d-55.90158786032711!3d-27.362923900000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9457be30301cea99%3A0xcffa04db9556754b!2sAv.%20Corrientes%201449%2C%20N3300MZI%20Posadas%2C%20Misiones!5e0!3m2!1ses-419!2sar!4v1730075220241!5m2!1ses-419!2sar"
             loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
 
 </html>
