--- a/pages/productos.html
+++ b/pages/productos.html
@@ -13,14 +13,16 @@
     <link rel="stylesheet" href="../css/estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-       <meta name="keywords" content="muebles, amoblamientos, servicios, muebles de melamina, muebles de madera, canteado piezas, corte placas, carpinteria ">
-       <meta name="description" content="Estos son los productos que hemos comercializado para otros clientes, encargue el suyo.">
-       <meta ptoperty="og:type" content="E-commerce">
-       <meta ptoperty="og:title" content="Amoblamientos a medida, muebles de melamina y madera">
-       <meta ptoperty="og:url" content="https://posadasdesign.netlify.app/">
-       <meta ptoperty="og:imagen" content="https://posadasdesign.netlify.app/img/logo.png">
-       <link rel="shortcut icon" href="../img/logo1.png" type="image/x-icon">
-       <title>Posadas | Design | Interiorismo Fabricacion de Amoblamientos</title>
+    <meta name="keywords"
+        content="muebles, amoblamientos, servicios, muebles de melamina, muebles de madera, canteado piezas, corte placas, carpinteria ">
+    <meta name="description"
+        content="Estos son los productos que hemos comercializado para otros clientes, encargue el suyo.">
+    <meta ptoperty="og:type" content="E-commerce">
+    <meta ptoperty="og:title" content="Amoblamientos a medida, muebles de melamina y madera">
+    <meta ptoperty="og:url" content="https://posadasdesign.netlify.app/">
+    <meta ptoperty="og:imagen" content="https://posadasdesign.netlify.app/img/logo.png">
+    <link rel="shortcut icon" href="../img/logo1.png" type="image/x-icon" alt="logo animado">
+    <title>Posadas | Design | Interiorismo Fabricacion de Amoblamientos</title>
 </head>
 
 <body>
@@ -58,7 +60,8 @@
 
     <main class="contenido-paginas">
         <section>
-            <h1 class="titulo-paginas" id="alineacion">Navegue en el carrousel de abajo para ver los productos ya terminados de clientes
+            <h1 class="titulo-paginas" id="alineacion">Navegue en el carrousel de abajo para ver los productos ya
+                terminados de clientes
                 y empresas que confiaron en nuerstros diseños.
             </h1>
             <div class="promociones">consulte por nuestras promociones</div>
@@ -77,16 +80,16 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="../img/Carousel (1).jpg" alt="Imagen 1">
+                    <img src="../img/Carousel (1).jpg" alt="Imagen producto">
                 </div>
                 <div class="carousel-item">
-                    <img src="../img/Carousel (2).jpg" alt="Imagen 2">
+                    <img src="../img/Carousel (2).jpg" alt="Imagen producto">
                 </div>
                 <div class="carousel-item">
-                    <img src="../img/Carousel (3).jpg" alt="Imagen 3">
+                    <img src="../img/Carousel (3).jpg" alt="Imagen producto">
                 </div>
                 <div class="carousel-item">
-                    <img src="../img/Carousel (4).jpg" alt="Imagen 4">
+                    <img src="../img/Carousel (4).jpg" alt="Imagen producto">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -105,9 +108,9 @@
 
     <footer class="footer-down">
         <div class="social-icons">
-            <img src="../img/facebook (2).png" width="45px" height="45px">
-            <img src="../img/instagram (2).png" width="45px" height="45px">
-            <img src="../img/whatsapp (2).png" width="45px" height="45px">
+            <img src="../img/facebook (2).png" width="45px" height="45px" alt="imagen redes sociales">
+            <img src="../img/instagram (2).png" width="45px" height="45px" alt="imagen redes sociales">
+            <img src="../img/whatsapp (2).png" width="45px" height="45px" alt="imagen redes sociales">
         </div>
         <a class='button-footer' href="../index.html">
             Volver al incio
@@ -116,9 +119,10 @@
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1771.7047480429308!2d-55.90158786032711!3d-27.362923900000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9457be30301cea99%3A0xcffa04db9556754b!2sAv.%20Corrientes%201449%2C%20N3300MZI%20Posadas%2C%20Misiones!5e0!3m2!1ses-419!2sar!4v1730075220241!5m2!1ses-419!2sar"
             loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
 
 </html>
