--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
 
                             <li class="nav-item">
-                                <a class="nav-link" href="./index.html">inicio</a>
-                                <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
-                                <a class="nav-link" href="./pages/productos.html">Productos</a>
-                                <a class="nav-link" href="./pages/servicios.html">Servicios</a>
-                                <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+                                <a class="nav-link" href="/">inicio</a>
+                                <a class="nav-link" href="/about">Nosotros</a>
+                                <a class="nav-link" href="/products">Productos</a>
+                                <a class="nav-link" href="/services">Servicios</a>
+                                <a class="nav-link" href="/contact">Contacto</a>
                             </li>
 
                         </ul>
